--- a/StockLSTM.ipynb
+++ b/StockLSTM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOZuJvE+Rmsxp2phxfJCeXl",
+      "authorship_tag": "ABX9TyOgJWlniSQJ+jzmvnb+OqgJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/noobnoob61/Stock_with_LSTM/blob/main/StockLSTM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Anya-2004/Stock_with_LSTM/blob/main/StockLSTM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -4690,7 +4690,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# above models failed\n",
+        "# for better predictions\n",
         "\n",
         "Use a random walk model(very close to\n",
         "stock prices), a naive forecast is the best forecast"
